<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    tools:context=".ui.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/tagofwar"
            android:layout_width="400dp"
            android:layout_height="200dp"
            app:layout_constraintBottom_toTopOf="@+id/welcomeText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/underwaterselfierafiki" />

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bubblegum_sans"
            android:padding="5dp"
            android:text="Get Busy"
            android:textColor="@color/magenta"
            android:textSize="42sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tagofwar" />

        <TextView
            android:id="@+id/fill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/magenta"
            android:padding="8dp"
            android:text="Please Fill in your details to access our random activities"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/userName"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeText" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/signImage"
            android:layout_width="6dp"
            android:layout_height="24dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/userName"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fill"
            app:shapeAppearanceOverlay="@style/radii" />

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/userName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="24dp"
            app:boxBackgroundColor="@color/white"

            app:layout_constraintBottom_toTopOf="@+id/userPhone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fill"
            app:startIconDrawable="@drawable/person"
            app:startIconTint="@color/magenta">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your full name" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userPhone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="24dp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/userTicket"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userName"
            app:startIconDrawable="@drawable/phone"
            app:startIconTint="@color/magenta">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your mobile number"
                android:inputType="number" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userTicket"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="24dp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/userSeat"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userPhone"
            app:startIconDrawable="@drawable/mail"
            app:startIconTint="@color/magenta">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your email address" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userSeat"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="24dp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/userCoach"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userTicket"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter your password"
                android:inputType="textPassword" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userCoach"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="24dp"
            app:boxBackgroundColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/btnSubmit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userSeat"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Confirm your password"

                android:inputType="textPassword" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:layout_marginTop="128dp"
            android:text="Submit"
            app:backgroundTint="@color/magenta"
            app:layout_constraintTop_toBottomOf="@id/userCoach"
            tools:layout_editor_absoluteX="50dp" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="left"
            app:constraint_referenced_ids="fill" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>